Fix spacing and text alignment on PresetDescPage

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,7 @@
     transform: rotate(360deg);
   }
 } */
+
+.page-section {
+  margin-bottom: 16rem;
+}
