--- a/src/components/Header/Header_logged_out.css
+++ b/src/components/Header/Header_logged_out.css
@@ -3,6 +3,7 @@
     justify-content: space-between;
     align-items: top;
     justify-self: center;
+    margin-bottom: 4rem;
 }
 
 .header > *{
